apps/pgadmin/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
